tests/neg/param-opt.stk
param newLine: Bool

fun printOpt(s: String): void =
  val a = s default true             // error

  val b = newLine default 3          // error

  val addNewLine: Bool = newLine default 3 // error
  print s
  if addNewLine then print "\n"

fun main =
  printOpt "hello "
  printOpt "world!" with newLine = true
